Don't call updateWebSearchMenu from selectionChanged. The search menu items will be added before the context menu is displayed.

BUG: 307973
FIXED-IN: 4.10