src/SessionController.cpp
@@ -369,7 +369,6 @@ void SessionController::selectionChanged(const QString& selectedText)
 {
     _selectedText = selectedText;
     updateCopyAction(selectedText);
-    updateWebSearchMenu();
 }
 
 void SessionController::updateCopyAction(const QString& selectedText)
